v0.0.1/modules/schema/pages/class/DiscExcContIEEEDEC1A.adoc
= `DiscExcContIEEEDEC1A`
:toclevels: 4


+++IEEE type DEC1A discontinuous excitation control model that boosts generator excitation to a level higher than that demanded by the voltage regulator and stabilizer immediately following a system fault.
Reference: IEEE 421.5-2005, 12.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DiscExcContIEEEDEC1A`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
**** *`DiscExcContIEEEDEC1A`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
DiscExcContIEEEDEC1A {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







































ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






















DiscExcContIEEEDEC1A -> ExcitationSystemDynamics: ExcitationSystemDynamics


DiscExcContIEEEDEC1A -> RemoteInputSignal: RemoteInputSignal


DiscExcContIEEEDEC1A -> DiagramObject: DiagramObjects


DiscExcContIEEEDEC1A -> InstanceSet: InstanceSet


DiscExcContIEEEDEC1A -> Name: Names


DiscExcContIEEEDEC1A -> ChangeSetMember: PropertiesCIMDataObject


DiscExcContIEEEDEC1A -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this discontinuous excitation control model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<esc,`esc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Speed change reference (<i>E</i><i><sub>SC</sub></i>).  Typical value = 0,0015.+++

| <<kan,`kan`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Discontinuous controller gain (<i>K</i><i><sub>AN</sub></i>).  Typical value = 400.+++

| <<ketl,`ketl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Terminal voltage limiter gain (<i>K</i><i><sub>ETL</sub></i>).  Typical value = 47.+++

| <<tan,`tan`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Discontinuous controller time constant (<i>T</i><i><sub>AN</sub></i>) (&gt;= 0).  Typical value = 0,08.+++

| <<td,`td`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 0,03.+++

| <<tl1,`tl1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>L</sub></i><sub>1</sub>) (&gt;= 0).  Typical value = 0,025.+++

| <<tl2,`tl2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>L</sub></i><sub>2</sub>) (&gt;= 0).  Typical value = 1,25.+++

| <<tw5,`tw5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++DEC washout time constant (<i>T</i><i><sub>W</sub></i><sub>5</sub>) (&gt;= 0).  Typical value = 5.+++

| <<val,`val`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Regulator voltage reference (<i>V</i><i><sub>AL</sub></i>).  Typical value = 5,5.+++

| <<vanmax,`vanmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter for Van (<i>V</i><i><sub>ANMAX</sub></i>).+++

| <<vomax,`vomax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>OMAX</sub></i>) (&gt; DiscExcContIEEEDEC1A.vomin).  Typical value = 0,3.+++

| <<vomin,`vomin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>OMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vomax).  Typical value = 0,1.+++

| <<vsmax,`vsmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>SMAX</sub></i>)(&gt; DiscExcContIEEEDEC1A.vsmin).  Typical value = 0,2.+++

| <<vsmin,`vsmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>SMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vsmax).  Typical value = -0,066.+++

| <<vtc,`vtc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Terminal voltage level reference (<i>V</i><i><sub>TC</sub></i>).  Typical value = 0,95.+++

| <<vtlmt,`vtlmt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage reference (<i>V</i><i><sub>TLMT</sub></i>).  Typical value = 1,1.+++

| <<vtm,`vtm`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage limits (<i>V</i><i><sub>TM</sub></i>).  Typical value = 1,13.+++

| <<vtn,`vtn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage limits (<i>V</i><i><sub>TN</sub></i>).  Typical value = 1,12.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this discontinuous excitation control system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#esc]
=== `esc`
+++Speed change reference (<i>E</i><i><sub>SC</sub></i>).  Typical value = 0,0015.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.esc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this discontinuous excitation control model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kan]
=== `kan`
+++Discontinuous controller gain (<i>K</i><i><sub>AN</sub></i>).  Typical value = 400.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.kan`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ketl]
=== `ketl`
+++Terminal voltage limiter gain (<i>K</i><i><sub>ETL</sub></i>).  Typical value = 47.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.ketl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this discontinuous excitation control system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

//[discrete]
[#tan]
=== `tan`
+++Discontinuous controller time constant (<i>T</i><i><sub>AN</sub></i>) (&gt;= 0).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tan`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#td]
=== `td`
+++Time constant (<i>T</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 0,03.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl1]
=== `tl1`
+++Time constant (<i>T</i><i><sub>L</sub></i><sub>1</sub>) (&gt;= 0).  Typical value = 0,025.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tl1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl2]
=== `tl2`
+++Time constant (<i>T</i><i><sub>L</sub></i><sub>2</sub>) (&gt;= 0).  Typical value = 1,25.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tl2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw5]
=== `tw5`
+++DEC washout time constant (<i>T</i><i><sub>W</sub></i><sub>5</sub>) (&gt;= 0).  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tw5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#val]
=== `val`
+++Regulator voltage reference (<i>V</i><i><sub>AL</sub></i>).  Typical value = 5,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.val`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vanmax]
=== `vanmax`
+++Limiter for Van (<i>V</i><i><sub>ANMAX</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vanmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vomax]
=== `vomax`
+++Limiter (<i>V</i><i><sub>OMAX</sub></i>) (&gt; DiscExcContIEEEDEC1A.vomin).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vomax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vomin]
=== `vomin`
+++Limiter (<i>V</i><i><sub>OMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vomax).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vomin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vsmax]
=== `vsmax`
+++Limiter (<i>V</i><i><sub>SMAX</sub></i>)(&gt; DiscExcContIEEEDEC1A.vsmin).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vsmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vsmin]
=== `vsmin`
+++Limiter (<i>V</i><i><sub>SMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vsmax).  Typical value = -0,066.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vsmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vtc]
=== `vtc`
+++Terminal voltage level reference (<i>V</i><i><sub>TC</sub></i>).  Typical value = 0,95.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vtlmt]
=== `vtlmt`
+++Voltage reference (<i>V</i><i><sub>TLMT</sub></i>).  Typical value = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtlmt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vtm]
=== `vtm`
+++Voltage limits (<i>V</i><i><sub>TM</sub></i>).  Typical value = 1,13.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vtn]
=== `vtn`
+++Voltage limits (<i>V</i><i><sub>TN</sub></i>).  Typical value = 1,12.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


