v1.1.0/modules/schema/pages/class/DiscExcContIEEEDEC1A.adoc
= `DiscExcContIEEEDEC1A`
:toclevels: 4


+++IEEE type DEC1A discontinuous excitation control model that boosts generator excitation to a level higher than that demanded by the voltage regulator and stabilizer immediately following a system fault.
Reference: IEEE 421.5-2005, 12.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DiscExcContIEEEDEC1A`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
**** *`DiscExcContIEEEDEC1A`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<esc,`esc`>>
//| [[slots_table.esc]]<<esc,`esc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed change reference (<i>E</i><i><sub>SC</sub></i>).  Typical value = 0,0015.+++
| _n/a_

| <<kan,`kan`>>
//| [[slots_table.kan]]<<kan,`kan`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Discontinuous controller gain (<i>K</i><i><sub>AN</sub></i>).  Typical value = 400.+++
| _n/a_

| <<ketl,`ketl`>>
//| [[slots_table.ketl]]<<ketl,`ketl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Terminal voltage limiter gain (<i>K</i><i><sub>ETL</sub></i>).  Typical value = 47.+++
| _n/a_

| <<tan,`tan`>>
//| [[slots_table.tan]]<<tan,`tan`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Discontinuous controller time constant (<i>T</i><i><sub>AN</sub></i>) (&gt;= 0).  Typical value = 0,08.+++
| _n/a_

| <<td,`td`>>
//| [[slots_table.td]]<<td,`td`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 0,03.+++
| _n/a_

| <<tl1,`tl1`>>
//| [[slots_table.tl1]]<<tl1,`tl1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>L</sub></i><sub>1</sub>) (&gt;= 0).  Typical value = 0,025.+++
| _n/a_

| <<tl2,`tl2`>>
//| [[slots_table.tl2]]<<tl2,`tl2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T</i><i><sub>L</sub></i><sub>2</sub>) (&gt;= 0).  Typical value = 1,25.+++
| _n/a_

| <<tw5,`tw5`>>
//| [[slots_table.tw5]]<<tw5,`tw5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++DEC washout time constant (<i>T</i><i><sub>W</sub></i><sub>5</sub>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<val,`val`>>
//| [[slots_table.val]]<<val,`val`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Regulator voltage reference (<i>V</i><i><sub>AL</sub></i>).  Typical value = 5,5.+++
| _n/a_

| <<vanmax,`vanmax`>>
//| [[slots_table.vanmax]]<<vanmax,`vanmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter for Van (<i>V</i><i><sub>ANMAX</sub></i>).+++
| _n/a_

| <<vomax,`vomax`>>
//| [[slots_table.vomax]]<<vomax,`vomax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>OMAX</sub></i>) (&gt; DiscExcContIEEEDEC1A.vomin).  Typical value = 0,3.+++
| _n/a_

| <<vomin,`vomin`>>
//| [[slots_table.vomin]]<<vomin,`vomin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>OMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vomax).  Typical value = 0,1.+++
| _n/a_

| <<vsmax,`vsmax`>>
//| [[slots_table.vsmax]]<<vsmax,`vsmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>SMAX</sub></i>)(&gt; DiscExcContIEEEDEC1A.vsmin).  Typical value = 0,2.+++
| _n/a_

| <<vsmin,`vsmin`>>
//| [[slots_table.vsmin]]<<vsmin,`vsmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>V</i><i><sub>SMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vsmax).  Typical value = -0,066.+++
| _n/a_

| <<vtc,`vtc`>>
//| [[slots_table.vtc]]<<vtc,`vtc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Terminal voltage level reference (<i>V</i><i><sub>TC</sub></i>).  Typical value = 0,95.+++
| _n/a_

| <<vtlmt,`vtlmt`>>
//| [[slots_table.vtlmt]]<<vtlmt,`vtlmt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage reference (<i>V</i><i><sub>TLMT</sub></i>).  Typical value = 1,1.+++
| _n/a_

| <<vtm,`vtm`>>
//| [[slots_table.vtm]]<<vtm,`vtm`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage limits (<i>V</i><i><sub>TM</sub></i>).  Typical value = 1,13.+++
| _n/a_

| <<vtn,`vtn`>>
//| [[slots_table.vtn]]<<vtn,`vtn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage limits (<i>V</i><i><sub>TN</sub></i>).  Typical value = 1,12.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this discontinuous excitation control model is associated.+++
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1 +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this discontinuous excitation control system model.+++
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#esc]
=== `esc`
+++Speed change reference (<i>E</i><i><sub>SC</sub></i>).  Typical value = 0,0015.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.esc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.esc,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this discontinuous excitation control model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kan]
=== `kan`
+++Discontinuous controller gain (<i>K</i><i><sub>AN</sub></i>).  Typical value = 400.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.kan`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kan,&#10548;>>
--
////


//[discrete]
[#ketl]
=== `ketl`
+++Terminal voltage limiter gain (<i>K</i><i><sub>ETL</sub></i>).  Typical value = 47.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.ketl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ketl,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this discontinuous excitation control system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#tan]
=== `tan`
+++Discontinuous controller time constant (<i>T</i><i><sub>AN</sub></i>) (&gt;= 0).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tan`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tan,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#td]
=== `td`
+++Time constant (<i>T</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 0,03.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.td,&#10548;>>
--
////


//[discrete]
[#tl1]
=== `tl1`
+++Time constant (<i>T</i><i><sub>L</sub></i><sub>1</sub>) (&gt;= 0).  Typical value = 0,025.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tl1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl1,&#10548;>>
--
////


//[discrete]
[#tl2]
=== `tl2`
+++Time constant (<i>T</i><i><sub>L</sub></i><sub>2</sub>) (&gt;= 0).  Typical value = 1,25.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tl2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl2,&#10548;>>
--
////


//[discrete]
[#tw5]
=== `tw5`
+++DEC washout time constant (<i>T</i><i><sub>W</sub></i><sub>5</sub>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.tw5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw5,&#10548;>>
--
////


//[discrete]
[#val]
=== `val`
+++Regulator voltage reference (<i>V</i><i><sub>AL</sub></i>).  Typical value = 5,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.val`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.val,&#10548;>>
--
////


//[discrete]
[#vanmax]
=== `vanmax`
+++Limiter for Van (<i>V</i><i><sub>ANMAX</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vanmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vanmax,&#10548;>>
--
////


//[discrete]
[#vomax]
=== `vomax`
+++Limiter (<i>V</i><i><sub>OMAX</sub></i>) (&gt; DiscExcContIEEEDEC1A.vomin).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vomax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vomax,&#10548;>>
--
////


//[discrete]
[#vomin]
=== `vomin`
+++Limiter (<i>V</i><i><sub>OMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vomax).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vomin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vomin,&#10548;>>
--
////


//[discrete]
[#vsmax]
=== `vsmax`
+++Limiter (<i>V</i><i><sub>SMAX</sub></i>)(&gt; DiscExcContIEEEDEC1A.vsmin).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vsmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vsmax,&#10548;>>
--
////


//[discrete]
[#vsmin]
=== `vsmin`
+++Limiter (<i>V</i><i><sub>SMIN</sub></i>) (&lt; DiscExcContIEEEDEC1A.vsmax).  Typical value = -0,066.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vsmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vsmin,&#10548;>>
--
////


//[discrete]
[#vtc]
=== `vtc`
+++Terminal voltage level reference (<i>V</i><i><sub>TC</sub></i>).  Typical value = 0,95.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtc,&#10548;>>
--
////


//[discrete]
[#vtlmt]
=== `vtlmt`
+++Voltage reference (<i>V</i><i><sub>TLMT</sub></i>).  Typical value = 1,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtlmt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtlmt,&#10548;>>
--
////


//[discrete]
[#vtm]
=== `vtm`
+++Voltage limits (<i>V</i><i><sub>TM</sub></i>).  Typical value = 1,13.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtm,&#10548;>>
--
////


//[discrete]
[#vtn]
=== `vtn`
+++Voltage limits (<i>V</i><i><sub>TN</sub></i>).  Typical value = 1,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC1A.vtn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtn,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
